<resources>
    <string name="app_nameWX">优财CMA网校</string>
    <string name="youcaiWXdescribe">优财网校CMA为在职财务人员提供专业与时俱进的CMA智能学习平台</string>
    <string name="youcaiWXShareDescribe">优财是引领CMA浪潮的先驱者</string>
    <string name="tab_home">首页</string>
    <string name="tab_class">课程</string>
    <string name="tab_learncenter">学习中心</string>
    <string name="tab_questionbank">题库</string>
    <string name="tab_mine">我的</string>
    <string name="home_live">直播</string>
    <string name="home_course">课程</string>
    <string name="home_face">面授</string>
    <string name="home_active">活动</string>
    <string name="home_active2">后续教育</string>
    <string name="home_news">资讯</string>
    <string name="home_scan">扫一扫</string>
    <string name="home_live_recommend">直播推荐</string>
    <string name="home_course_recommend">课程推荐</string>
    <string name="home_news_zixun">最新资讯</string>
    <string name="home_more">查看更多</string>
    <string name="scan_tiptext">将二维码/条码放入框内,即可自动扫描</string>
    <string name="event_countNum">报名人数:\u0020\u0020%s人</string>
    <string name="event_point">CPE积分:\u0020\u0020%s分</string>
    <string name="event_havedJoin">已报名%s人</string>
    <string name="event_timeLimit">/限%s人报名</string>
    <string name="event_btn_join">我要报名</string>
    <string name="event_btn_pastdue">已过期</string>
    <string name="event_btn_apply">已报名</string>
    <string name="fue_CPE">后续教育</string>
    <string name="CPEApplyFor">CPE证明申请</string>
    <string name="proveinformation">证明信息</string>
    <string name="GenerateReport">生成报告</string>
    <string name="addProveInfo">添加证明信息</string>
    <string name="cpe_name">姓名:\u0020</string>
    <string name="cpe_vipNumber">IMA会员号:\u0020</string>
    <string name="cpe_IDNumber">身份证号:\u0020</string>
    <string name="cpe_tips_name">请填写您的姓名</string>
    <string name="cpe_tips_name_error">姓名格式有误</string>
    <string name="cpe_tips_idnum">请填写您的身份证号</string>
    <string name="cpe_tips_idnum_error">身份证号格式不正确</string>
    <string name="cpe_tips_vip">请填写您的会员号</string>
    <string name="cpe_tips_proveinfo">请填写证明信息</string>
    <string name="cpe_tips_prove_course">请选择申请课程</string>
    <string name="cpe_tips_havesaved">文件已保存至相册,请前往查看</string>
    <string name="cpe_tips_havesaved_error">图片保存失败</string>
    <string name="cpe_tips_saving">图片保存中</string>
    <string name="cpe_tips_notfoundurl">无法获取图片路径</string>
    <string name="classify">分类</string>
    <string name="sort">排序</string>
    <string name="screen">筛选</string>
    <string name="not_apply">您还未报名,报名后进行学习！</string>
    <string name="signin_tips">您还在吗？点击屏幕继续学习。</string>
    <string name="signin">签到</string>
    <string name="signin_tips_success">签到成功</string>
    <string name="signin_tips_error">签到失败</string>
    <string name="study_know">学习须知</string>
    <string name="study_know_detail">如何获得本课程学分：每个视频结束后点击“签到”成功后，即可获取对应视频的积分。</string>
    <string name="cpe_edit_name">您的姓名</string>
    <string name="cpe_edit_idnumber">您的身份证号码</string>
    <string name="cpe_edit_vip">您的IMA会员号</string>
    <string name="complted_time">完成时间:\u0020%s</string>
    <string name="login_wechat">微信</string>
    <string name="login_sms">短信登录</string>
    <string name="login_account">账号</string>
    <string name="login_register">注册</string>
    <string name="login_minecenter">完善资料</string>
    <string name="login_forgetpass">忘记密码?</string>
    <string name="login_text">—\u3000其他登录方式\u3000—</string>
    <string name="login_login">登录</string>
    <string name="login_confirm">确认</string>
    <string name="login_register_success">恭喜您注册成功</string>
    <string name="login_tolearn">开始学习</string>
    <string name="login_tipphone">用户名/手机号</string>
    <string name="login_tippass">密码</string>
    <string name="new_password">新密码</string>
    <string name="register_tipphone">请输入手机号</string>
    <string name="register_tippass">请输入密码</string>
    <string name="register_tipconfirmpass">确认密码</string>
    <string name="register_tipcode">请输入验证码</string>
    <string name="register_tipgetcode">获取验证码</string>
    <string name="register_tiptext1">我已阅读并同意</string>
    <string name="register_tiptext2">《用户注册协议》</string>
    <string name="register_tiptext3">用户注册协议</string>
    <string name="tipsound1">收不到短信,\u0020试试</string>
    <string name="tipsound2">语音验证码</string>
    <string name="login_mobile_isempty">手机号不能为空</string>
    <string name="login_password_isempty">密码不能为空</string>
    <string name="login_mobile_iserror">您的账号格式不正确</string>
    <string name="login_error">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="login_logining">正在登录</string>
    <string name="register_registing">注册中</string>
    <string name="reset_resting">密码重置中</string>
    <string name="completed_resting">正在完善信息</string>
    <string name="completed_error">信息完善失败</string>
    <string name="register_error">注册失败</string>
    <string name="reset_error">密码重置失败</string>
    <string name="reset_success">密码重置成功</string>
    <string name="register_sendcode">验证码已发送,请注意查收</string>
    <string name="register_sendcode_error">验证码发送失败</string>
    <string name="register_password_tip">请输入密码</string>
    <string name="register_mobile_tip">请输入您的账号</string>
    <string name="register_password_error">密码长度最小为6位</string>
    <string name="register_smscode_error">请输入验证码</string>
    <string name="register_psdAndconfirmpsd_error">两次密码不一致</string>
    <string name="register_argument_tip">请同意用户注册协议</string>
    <string name="wx_noinstanl">您的设备尚未安装微信,请安装后再登录!</string>
    <string name="wx_upperlimit">设备达到上限</string>
    <string name="course_consumeFlow">正在使用非WiFi网络,播放将产生流量费用</string>
    <string name="course_free">免费试听</string>
    <string name="course_joincount">参加人数:\u0020\u0020</string>
    <string name="course_call">咨询客服</string>
    <string name="course_pay">立即报名</string>
    <string name="course_teacherintroduction">讲师介绍</string>
    <string name="course_classintroduction">课程介绍</string>
    <string name="course_introduce">课程介绍</string>
    <string name="course_directory">课程目录</string>
    <string name="course_ask">课程答疑</string>
    <string name="course_download">下载列表</string>
    <string name="course_getInfoError">无法获取视频资源</string>
    <string name="course_collectionSuccess">已收藏</string>
    <string name="course_collectionCancel">已取消收藏</string>
    <string name="course_qualityLoading">正在切换画质</string>
    <string name="course_qualityLoadingCompleted">画质切换完毕</string>
    <string name="course_changing">切换中,请稍后</string>
    <string name="course_PDFloading">讲义加载中,请稍后</string>
    <string name="video_fullscreen">满屏</string>
    <string name="video_percent">比例</string>
    <string name="video_percent_100">100%</string>
    <string name="video_percent_75">75%</string>
    <string name="video_percent_50">50%</string>
    <string name="video_continue_play">连续播放</string>
    <string name="course_PDFnotExits">讲义不存在</string>
    <string name="course_PDF_changeToPDF">已切换为讲义</string>
    <string name="course_PDF_changeToVideo">已切换为视频</string>
    <string name="course_lockedScreen">屏幕已锁定</string>
    <string name="course_NumOfLearning">%s人学习过</string>
    <string name="video">视频</string>
    <string name="notes">讲义</string>
    <string name="exercises">习题</string>
    <string name="holder_courseTime">课时:\u3000</string>
    <string name="first_login">请先登录</string>
    <string name="course_baoming">立即报名</string>
    <string name="course_buyBank">您还未拥有题库</string>
    <string name="course_buyCourse">您还未拥有课程</string>
    <string name="course_notAsk">该课程无法提问</string>
    <string name="course_completed">播放完毕</string>
    <string name="course_completed_replay">播放完毕,点击重播</string>
    <string name="course_videoLoading">视频加载中</string>
    <string name="course_courseDuration">课程时长:\u3000</string>
    <string name="course_freeWatchCompleted">试看结束,请购买相关课程\u3000</string>
    <string name="course_speed">%sX</string>
    <string name="mine_integral">我的积分</string>
    <string name="mine_balance">账户余额</string>
    <string name="mine_Coupon">优惠券</string>
    <string name="mine_Coupons">我的优惠券</string>
    <string name="mine_disabledCoupons">失效券</string>
    <string name="mine_Course">我的课程</string>
    <string name="mine_Collection">我的收藏</string>
    <string name="mine_event">我的活动</string>
    <string name="mine_cpe">CPE学分报告</string>
    <string name="mine_offline">离线课程</string>
    <string name="mine_order">我的订单</string>
    <string name="mine_orderDetail">订单详情</string>
    <string name="mine_answer">我的问答</string>
    <string name="mine_record">观看记录</string>
    <string name="mine_CPErecord">CPE记录</string>
    <string name="mine_wxRemind">微信学习提醒</string>
    <string name="mine_recommendfriend">推荐给好友</string>
    <string name="mine_connectOurs">联系我们</string>
    <string name="mine_feedback">意见反馈</string>
    <string name="mine_about">关于优财</string>
    <string name="mine_agreement">用户协议</string>
    <string name="mine_didnotopen">未开启</string>
    <string name="mine_tologin">请登录</string>
    <string name="mine_sendTenintegral">送10积分</string>
    <string name="mine_personnelsetting">个人设置</string>
    <string name="mine_updatePWD">修改密码</string>
    <string name="mine_modifrName">修改昵称</string>
    <string name="mine_userIcon">头像</string>
    <string name="mine_Nickname">昵称</string>
    <string name="mine_userSex">性别</string>
    <string name="mine_userPhone">手机</string>
    <string name="mine_userAddress">我的地址</string>
    <string name="mine_addAddress">添加地址</string>
    <string name="mine_editAddress">编辑地址</string>
    <string name="mine_Man">男</string>
    <string name="mine_woman">女</string>
    <string name="mine_takeCamera">选择拍照</string>
    <string name="mine_takePhoto">选择照片</string>
    <string name="mine_yuan">元</string>
    <string name="mine_zhang">张</string>
    <string name="mine_nicknameHint">请输入昵称</string>
    <string name="mine_modifyNameHint">4-10个字符,可由中英文、数字、“_”、“-”组成</string>
    <string name="mine_maxEdittor10">昵称长度不能超过10个字符</string>
    <string name="mine_modifyNameTips1">昵称长度为4～10个字符</string>
    <string name="mine_modifyNameTips2">昵称不能包含特殊字符</string>
    <string name="mine_modifyNameTips3">昵称不能重复</string>
    <string name="mine_addressHint_Name">收货人</string>
    <string name="mine_addressHint_Phone">手机号码</string>
    <string name="mine_addressHint_Address">详细地址：省市区、道路、门牌号、小区、楼栋号、单元室等</string>
    <string name="mine_addressHint_setDefault">设为默认地址</string>
    <string name="invoice">发票</string>
    <string name="invoice_Infomation">发票须知</string>
    <string name="invoice_content">发票内容</string>
    <string name="invoice_type">发票类型</string>
    <string name="invoice_companyName">单位名称</string>
    <string name="invoice_IdentificationNumber">纳税人识别号</string>
    <string name="invoice_registeraddress">注册地址</string>
    <string name="invoice_registerphone">注册电话</string>
    <string name="invoice_bank">开户银行</string>
    <string name="invoice_bankAccount">银行账户</string>
    <string name="invoice_common">增值税普通发票</string>
    <string name="invoice_special">增值税专用发票</string>
    <string name="invoice_Trainingfees">培训费</string>
    <string name="invoice_des">电子发票与纸质普通发票具备同等法律效力，可以支持报销入账。</string>
    <string name="invoice_detail">发票内容选项已根据税法调整，具体请以展示为准</string>
    <string name="invoice_editTips2">请输入单位名称</string>
    <string name="invoice_editTips3">请输入纳税人识别号</string>
    <string name="invoice_editTips4">请输入注册地址</string>
    <string name="invoice_editTips5">请输入注册电话</string>
    <string name="invoice_editTips6">请输入注册银行</string>
    <string name="invoice_editTips7">请输入银行账户</string>
    <string name="WarmPrompt">服务协议和隐私政策</string>
    <string name="agreementTitle">欢迎使用优财CMA网校,本应用非常重视您的隐私和个人信息保护。在您使用前，请您认真阅读</string>
    <string name="agreementTitle2">《用户协议》</string>
    <string name="agreementTitle3">和</string>
    <string name="agreementTitle4">《隐私政策》</string>
    <string name="agreementTitle5">您同意接收全部条款后方可使用。</string>
    <string name="agreement_cancel">暂不使用</string>
    <string name="agreement_confirm">同意</string>
    <string name="confirm">确定</string>
</resources>