<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_invoicespecial"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="* "
            android:textColor="@color/color_E84342"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="@dimen/dp_95"
            android:layout_height="wrap_content"
            android:text="@string/invoice_companyName"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_12" />

        <EditText
            android:id="@+id/edit_specialName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/invoice_editTips2"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_C7C7C7"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_E6E6E6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="* "
            android:textColor="@color/color_E84342"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="@dimen/dp_95"
            android:layout_height="wrap_content"
            android:text="@string/invoice_IdentificationNumber"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_12" />

        <EditText
            android:id="@+id/edit_specialNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/invoice_editTips3"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_C7C7C7"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_E6E6E6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="* "
            android:textColor="@color/color_E84342"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="@dimen/dp_95"
            android:layout_height="wrap_content"
            android:text="@string/invoice_registeraddress"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_12" />

        <EditText
            android:id="@+id/edit_specialAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/invoice_editTips4"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_C7C7C7"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_E6E6E6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="* "
            android:textColor="@color/color_E84342"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="@dimen/dp_95"
            android:layout_height="wrap_content"
            android:text="@string/invoice_registerphone"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_12" />

        <EditText
            android:id="@+id/edit_specialPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/invoice_editTips5"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_C7C7C7"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_E6E6E6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="* "
            android:textColor="@color/color_E84342"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="@dimen/dp_95"
            android:layout_height="wrap_content"
            android:text="@string/invoice_bank"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_12" />

        <EditText
            android:id="@+id/edit_specialBank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/invoice_editTips6"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_C7C7C7"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_E6E6E6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="* "
            android:textColor="@color/color_E84342"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="@dimen/dp_95"
            android:layout_height="wrap_content"
            android:text="@string/invoice_bankAccount"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_12" />

        <EditText
            android:id="@+id/edit_specialBankAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/invoice_editTips7"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_C7C7C7"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_E6E6E6" />
</LinearLayout>