<?xml version="1.0" encoding="utf-8"?>
<com.flyco.roundview.RoundLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lLayout_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    app:rv_backgroundColor="@android:color/white"
    app:rv_cornerRadius="@dimen/dp_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dp_70"
        android:orientation="vertical"
        android:paddingEnd="@dimen/dp_15"
        android:paddingStart="@dimen/dp_15">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/WarmPrompt"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/agreementTitle"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/agreementTitle2"
                android:textColor="@color/color_E84342"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/agreementTitle3"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/txt_Privacyagreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/agreementTitle4"
                android:textColor="@color/color_E84342"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_15"
            android:text="@string/agreementTitle5"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/color_E6E6E6" />

    <com.ucfo.youcaiwx.widget.customview.CricleFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bottomLeftRadius="@dimen/dp_8"
        app:bottomRightRadius="@dimen/dp_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_43"
            android:orientation="horizontal">

            <com.flyco.roundview.RoundTextView
                android:id="@+id/btn_neg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:stateListAnimator="@drawable/shape_selector_elevation"
                android:text="@string/agreement_cancel"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_15"
                app:rv_backgroundColor="@android:color/white"
                app:rv_backgroundPressColor="@color/color_E6E6E6"
                app:rv_cornerRadius_BL="@dimen/dp_8"
                tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute" />

            <View
                android:id="@+id/img_line"
                android:layout_width="@dimen/dp_0_5"
                android:layout_height="match_parent"
                android:background="@color/color_E6E6E6" />

            <com.flyco.roundview.RoundTextView
                android:id="@+id/btn_pos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:stateListAnimator="@drawable/shape_selector_elevation"
                android:text="@string/agreement_confirm"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_15"
                app:rv_backgroundColor="@android:color/white"
                app:rv_backgroundPressColor="@color/color_E6E6E6"
                app:rv_cornerRadius_BR="@dimen/dp_8"
                tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute" />
        </LinearLayout>
    </com.ucfo.youcaiwx.widget.customview.CricleFrameLayout>
</com.flyco.roundview.RoundLinearLayout>